Fixed header overlap bug

--- a/styles/header.css
+++ b/styles/header.css
@@ -15,6 +15,7 @@
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(200, 200, 200);
+  z-index: 2;
 }
 
 .gsa-logo {
